--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -463,7 +463,7 @@ a {
   }
   
   .conversation-date {
-	font-size: 1rem;
+	font-size: .8rem;
 	grid-column: span 2;
 	padding-left: 5px;
 	white-space: nowrap;
