--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
                         <a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link text-white" href="/inbox">Inbox</a>
+                        <a class="nav-link text-white" href="/inbox">Disscussion</a>
                     </li>
                     <li class="nav-item dropdown px-2">
                         <img src=" <%= user.profilePics %> " alt="profile pics" class="img-fluid rounded-circle"
