--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,8 @@
 	<script src="https://kit.fontawesome.com/d31fdde05f.js" crossorigin="anonymous"></script>
 	<script src="./scripts/moment.js"></script>
 
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 	<!--  custom css  -->
 	<link rel="stylesheet" href="/styles/style.css" />
 </head>
