--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 	<script src="https://kit.fontawesome.com/d31fdde05f.js" crossorigin="anonymous"></script>
-	<script src="./scripts/moment.js"></script>
+	<!-- <script src="./scripts/moment.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
