--- a/views/pages/dashboard/course/attendanceTable.ejs
+++ b/views/pages/dashboard/course/attendanceTable.ejs
@@ -96,29 +96,37 @@ function getValue(inputTag) {
 }
 
 async function GetCellValues(courseId) {
-    console.log("values", value);
+    // console.log("values", value);
 
     let url = `http://localhost:3000/courses/attendances/update/${courseId}`;
 
-    await fetch(url, {
+    let response = await fetch(url, {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
         },
         body: JSON.stringify(value),
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log('Success:', data);
-            setTimeout(() => {
-                location.reload();
-            }, 100);
-        })
-        .catch((error) => {
-            console.error('Error:', error);
-            setTimeout(() => {
-                location.reload();
-            }, 100);
-    });
+        });
+    let result = await response.json();
+
+    if(result.errrors){
+        // messages failure toast
+        const messagesFailureToast = Toastify({
+            text: result.errors.msg,
+            duration: 2000,
+        });
+
+        messagesFailureToast.showToast();
+    }else{
+
+        // messages failure toast
+        const messagesFailureToast = Toastify({
+            text: "Update success!",
+            duration: 2000,
+        });
+
+        messagesFailureToast.showToast();
+    }
+    
 }
 </script>
