--- a/views/pages/dashboard/course/attendanceTable.ejs
+++ b/views/pages/dashboard/course/attendanceTable.ejs
@@ -1,4 +1,4 @@
-<div class="bg-white rounded shadow mt-2">
+<div class="col-md-12 bg-white rounded shadow mt-2">
     <h4 class="text-center"><u>Your Attendance List</u></h4>
     <table class="table table-hover" id="table">
         <thead class="table-active">
