--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,7 +18,8 @@
                         <a class="nav-link text-white" href="/courses/create">Create Class</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
+                        <a 
+                            class="nav-link text-white cursor-pointer" onclick="togglePopup()">Join Class</a>
                     </li>
                     <li class="nav-item px-2">
                         <a class="nav-link text-white" href="/inbox">Discussion</a>
