--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -2,7 +2,7 @@
 
     <% if (courses.length){ %>
         <div class="my-3">
-            <h5 class="font-weight-bold border-bottom border-info" data-toggle="collapse" data-target="#courseListsOwned">Created Classes</h5>
+            <h5 class="font-weight-bold border-bottom border-info cursor-pointer" data-toggle="collapse" data-target="#courseListsOwned">Created Classes</h5>
         </div>
         <div class="card-body my-1 collapse" id="courseListsOwned">
         
@@ -34,7 +34,7 @@
     
     <% if (myJoinedClass.length){ %>
         <div>
-            <h5 class="font-weight-bold border-bottom border-info" data-toggle="collapse" data-target="#courseLists">Joined Classes</h5>
+            <h5 class="font-weight-bold border-bottom border-info cursor-pointer" data-toggle="collapse" data-target="#courseLists">Joined Classes</h5>
           <!--   <img src="images/download.png" width="30px" height="20px"> -->
         </div>
         <div class="card-body my-1 collapse" id="courseLists">
