--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -60,6 +60,11 @@ a {
 	transition: all 300ms ease-in-out;
 	transform: translate(-50%,-50%) scale(1);
 }
+
+.cursor-pointer:hover{
+	cursor: pointer;
+}
+
 .joinCode {
 	text-align: center;
 	font-size: 20px;
