--- a/views/pages/contactus.ejs
+++ b/views/pages/contactus.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header.ejs") %>
 
-    <div class="bg-dark text-white">
+    <div class="bg-dark text-white pb-4">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
@@ -17,7 +17,7 @@
                 <div class="col-md-12">
                     <h1 class="text-center mb-3 ">Contact Us</h1>
                     <p class="p-3" style="font-size: 20px;">
-                        This is Automatic Attendance System, this system uses web cam, CCTV or any media to collect student's  photo. Then recognize & store their attendances.
+                        
                     </p>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="text mt-3">
-                            <h5>marzuk777@gmail.com</h5>
+                            <h5>presencesystembd@gmail.com</h5>
                         </div>
                     </div>
                 </div>
