--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -36,7 +36,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/auth/change-password">Change Password</a>
                             <a class="dropdown-item" href="/dashboard/edit-profile">Edit profile</a>
-                            <a class="dropdown-item" href="/dashboard/sample-picture">Sample picture</a>
+                            <!-- <a class="dropdown-item" href="/dashboard/sample-picture">Sample picture</a> -->
                             <a class="dropdown-item" href="/auth/logout">Logout</a>
                         </div>
                     </li>
@@ -50,6 +50,9 @@
                         </li>
                         <li class="nav-item px-2">
                             <a class="nav-link text-white" href="/contact-us">Contact Us</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link text-white" href="/about-us">About</a>
                         </li>
                     <% } %>
             </ul>
